maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:10: error: not found: value l
    		{if (aBiscuit(l,h)) {setIndication(x,y,0)}}
                              ^JediEscaper:10: error: not found: value h
    		{if (aBiscuit(l,h)) {setIndication(x,y,0)}}
                                ^JediEscaper:17: error: not found: value x
      if (getIndication(x,y)==i) {
                        ^JediEscaper:17: error: not found: value y
      if (getIndication(x,y)==i) {
                          ^JediEscaper:20: error: not found: value y
        if (y >0 && !aMurNord(x,y) && getIndication(x,y-1)==9999)
            ^JediEscaper:20: error: not found: value x
        if (y >0 && !aMurNord(x,y) && getIndication(x,y-1)==9999)
                              ^JediEscaper:20: error: not found: value y
        if (y >0 && !aMurNord(x,y) && getIndication(x,y-1)==9999)
                                ^JediEscaper:20: error: not found: value x
        if (y >0 && !aMurNord(x,y) && getIndication(x,y-1)==9999)
                                                    ^JediEscaper:20: error: not found: value y
        if (y >0 && !aMurNord(x,y) && getIndication(x,y-1)==9999)
                                                      ^JediEscaper:21: error: not found: value x
        		{setIndication(x,y-1,i+1)}
                                       ^JediEscaper:21: error: not found: value y
        		{setIndication(x,y-1,i+1)}
                                         ^JediEscaper:23: error: not found: value x
        if (x < largeur-1 && !aMurOuest(x,y) && getIndication(x+1,y)==9999)
            ^JediEscaper:23: error: not found: value x
        if (x < largeur-1 && !aMurOuest(x,y) && getIndication(x+1,y)==9999)
                                        ^JediEscaper:23: error: not found: value y
        if (x < largeur-1 && !aMurOuest(x,y) && getIndication(x+1,y)==9999)
                                          ^JediEscaper:23: error: not found: value x
        if (x < largeur-1 && !aMurOuest(x,y) && getIndication(x+1,y)==9999)
                                                              ^JediEscaper:23: error: not found: value y
        if (x < largeur-1 && !aMurOuest(x,y) && getIndication(x+1,y)==9999)
                                                                  ^JediEscaper:24: error: not found: value x
        		{setIndication(x+1,y,i+1)}
                                       ^JediEscaper:24: error: not found: value y
        		{setIndication(x+1,y,i+1)}
                                           ^JediEscaper:26: error: not found: value y
        if (y < hauteur-1 && !aMurNord(x,y+1) && getIndication(x,y+1)==9999)
            ^JediEscaper:26: error: not found: value x
        if (y < hauteur-1 && !aMurNord(x,y+1) && getIndication(x,y+1)==9999)
                                       ^JediEscaper:26: error: not found: value y
        if (y < hauteur-1 && !aMurNord(x,y+1) && getIndication(x,y+1)==9999)
                                         ^JediEscaper:26: error: not found: value x
        if (y < hauteur-1 && !aMurNord(x,y+1) && getIndication(x,y+1)==9999)
                                                               ^JediEscaper:26: error: not found: value y
        if (y < hauteur-1 && !aMurNord(x,y+1) && getIndication(x,y+1)==9999)
                                                                 ^JediEscaper:27: error: not found: value x
        		{setIndication(x,y+1,i+1)}
                                       ^JediEscaper:27: error: not found: value y
        		{setIndication(x,y+1,i+1)}
                                         ^JediEscaper:29: error: not found: value x
        if (x > 0 && !aMurOuest(x-1,y) && getIndication(x-1,y)==9999)
            ^JediEscaper:29: error: not found: value x
        if (x > 0 && !aMurOuest(x-1,y) && getIndication(x-1,y)==9999)
                                ^JediEscaper:29: error: not found: value y
        if (x > 0 && !aMurOuest(x-1,y) && getIndication(x-1,y)==9999)
                                    ^JediEscaper:29: error: not found: value x
        if (x > 0 && !aMurOuest(x-1,y) && getIndication(x-1,y)==9999)
                                                        ^JediEscaper:29: error: not found: value y
        if (x > 0 && !aMurOuest(x-1,y) && getIndication(x-1,y)==9999)
                                                            ^JediEscaper:30: error: not found: value x
        		{setIndication(x-1,y,i+1)}
                                       ^JediEscaper:30: error: not found: value y
        		{setIndication(x-1,y,i+1)}
                                           ^JediEscaper:38: error: not found: value x
    		{if (getIndication(x,y)==9999) {return false}}
                                   ^JediEscaper:38: error: not found: value y
    		{if (getIndication(x,y)==9999) {return false}}
                                     ^JediEscaper:46: error: not found: value y
    if (y >0 && !aMurNord(x,y) && getIndication(x,y-1)==ind-1)
        ^JediEscaper:46: error: not found: value x
    if (y >0 && !aMurNord(x,y) && getIndication(x,y-1)==ind-1)
                          ^JediEscaper:46: error: not found: value y
    if (y >0 && !aMurNord(x,y) && getIndication(x,y-1)==ind-1)
                            ^JediEscaper:46: error: not found: value x
    if (y >0 && !aMurNord(x,y) && getIndication(x,y-1)==ind-1)
                                                ^JediEscaper:46: error: not found: value y
    if (y >0 && !aMurNord(x,y) && getIndication(x,y-1)==ind-1)
                                                  ^JediEscaper:49: error: not found: value x
    if (x < largeur-1 && !aMurOuest(x,y) && getIndication(x+1,y)==ind-1)
        ^JediEscaper:49: error: not found: value x
    if (x < largeur-1 && !aMurOuest(x,y) && getIndication(x+1,y)==ind-1)
                                    ^JediEscaper:49: error: not found: value y
    if (x < largeur-1 && !aMurOuest(x,y) && getIndication(x+1,y)==ind-1)
                                      ^JediEscaper:49: error: not found: value x
    if (x < largeur-1 && !aMurOuest(x,y) && getIndication(x+1,y)==ind-1)
                                                          ^JediEscaper:49: error: not found: value y
    if (x < largeur-1 && !aMurOuest(x,y) && getIndication(x+1,y)==ind-1)
                                                              ^JediEscaper:52: error: not found: value y
    if (y < hauteur-1 && !aMurNord(x,y+1) && getIndication(x,y+1)==ind-1)
        ^JediEscaper:52: error: not found: value x
    if (y < hauteur-1 && !aMurNord(x,y+1) && getIndication(x,y+1)==ind-1)
                                   ^JediEscaper:52: error: not found: value y
    if (y < hauteur-1 && !aMurNord(x,y+1) && getIndication(x,y+1)==ind-1)
                                     ^JediEscaper:52: error: not found: value x
    if (y < hauteur-1 && !aMurNord(x,y+1) && getIndication(x,y+1)==ind-1)
                                                           ^JediEscaper:52: error: not found: value y
    if (y < hauteur-1 && !aMurNord(x,y+1) && getIndication(x,y+1)==ind-1)
                                                             ^JediEscaper:55: error: not found: value x
    if (x > 0 && !aMurOuest(x-1,y) && getIndication(x-1,y)==ind-1)
        ^JediEscaper:55: error: not found: value x
    if (x > 0 && !aMurOuest(x-1,y) && getIndication(x-1,y)==ind-1)
                            ^JediEscaper:55: error: not found: value y
    if (x > 0 && !aMurOuest(x-1,y) && getIndication(x-1,y)==ind-1)
                                ^JediEscaper:55: error: not found: value x
    if (x > 0 && !aMurOuest(x-1,y) && getIndication(x-1,y)==ind-1)
                                                    ^JediEscaper:55: error: not found: value y
    if (x > 0 && !aMurOuest(x-1,y) && getIndication(x-1,y)==ind-1)
                                                        ^